# Discord

./: CMakeLists.txt  README.md
include/Discord/: Connections.hpp  Gateway.hpp  TimeKeeper.hpp  WebSocket.hpp
src/: Gateway.cpp
test/: CMakeLists.txt
test/src/: Common.cpp  Common.hpp  ConnectionTests.cpp  GatewayTests.cpp  HeartbeatTests.cpp
